catkin_ws/logs/firefly_control/build.make.179.log.stderr
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:97:5: error: ‘int32’ does not name a type
     int32 id;
     ^
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::callback_tag(const ConstPtr&)’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:22:13: error: ‘id’ was not declared in this scope
             id = msg->detections[0].id;
             ^
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::command_fly()’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:74:17: error: ‘id’ was not declared in this scope
              << id << endl;
                 ^
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
make[1]: *** [CMakeFiles/control.dir/all] Error 2
make: *** [all] Error 2
